--- a/MinC.csproj
+++ b/MinC.csproj
@@ -53,6 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bank.cs" />
+    <Compile Include="DataPrototype.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="FormBankStabibity.cs">
       <SubType>Form</SubType>
     </Compile>
